--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
 
 <div class="container">
-  <img src="/Users/tiffanyshe/Downloads/BowArt/asset/Temple 01.png" alt="Temple 01">
+  <img src="asset/Temple 01.png" alt="Temple 01">
   
   <div class="button-container">
     <button class="button button1" onclick="window.location.href='/Users/tiffanyshe/Downloads/BowArt/page01.html'" type="button"> ENTER </button>
