--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   <img src="asset/Temple 01.png" alt="Temple 01">
   
   <div class="button-container">
-    <button class="button button1" onclick="window.location.href='/Users/tiffanyshe/Downloads/BowArt/page01.html'" type="button"> ENTER </button>
-    <button class="button button2" onclick="window.location.href='/Users/tiffanyshe/Downloads/BowArt/page00.html'"type="button">ABOUT</button>
+    <button class="button button1" onclick="window.location.href='page01.html'" type="button"> ENTER </button>
+    <button class="button button2" onclick="window.location.href='page00.html'"type="button">ABOUT</button>
   </div>
 </div>
 
