--- a/page00.html
+++ b/page00.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-  background-image: url('/Users/tiffanyshe/Downloads/BowArt/asset/window.png');
+  background-image: url('asset/window.png');
   background-repeat: no-repeat;
   background-attachment: absolute;  
   background-size: cover;
