--- a/page01.html
+++ b/page01.html
@@ -51,12 +51,12 @@
 <body>
 
 <div class="container">
-  <img src="/Users/tiffanyshe/Downloads/BowArt/asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
+  <img src="asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
 </div>
 
 <script>
 //Define the audio object
-  const aAudio = new Audio('/Users/tiffanyshe/Downloads/BowArt/audio/1.mp3')
+  const aAudio = new Audio('audio/1.mp3')
 
 //Function to play the audio
   function playAudio(){
@@ -66,24 +66,24 @@
   
 <div class="row">
     <div class="column">
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page04.html" target="form">
-    <img src="/Users/tiffanyshe/Downloads/BowArt/asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></div>
+    <a href="page04.html" target="form">
+    <img src="asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></div>
 
     <div class="column">
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page05.html" target="realm">
-    <img src="/Users/tiffanyshe/Downloads/BowArt/asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></div>
+    <a href="page05.html" target="realm">
+    <img src="asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></div>
 
     <div class="column">
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page06.html" target="conception">
-    <img src="/Users/tiffanyshe/Downloads/BowArt/asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></div>
+    <a href="page06.html" target="conception">
+    <img src="asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></div>
 
     <div class="column">
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page08.html" target="volition">
-    <img src="/Users/tiffanyshe/Downloads/BowArt/asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></div>
+    <a href="page08.html" target="volition">
+    <img src="asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></div>
 
     <div class="column">
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page09.html" target="Consciousness">
-    <img src="/Users/tiffanyshe/Downloads/BowArt/asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></div>
+    <a href="page09.html" target="Consciousness">
+    <img src="asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></div>
 </div>
 </div>
 
