--- a/page08.html
+++ b/page08.html
@@ -19,7 +19,7 @@
             padding: 80px;
             box-sizing: border-box;
             width: 100%;
-            background-image: url('/Users/tiffanyshe/Downloads/BowArt/volition.png') ;
+            background-image: url('volition.png') ;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -120,11 +120,11 @@
     <div class="container">
         <!-- Group for Word Image and its Card -->
         <div class="image-card-group">
-            <img src="/Users/tiffanyshe/Downloads/BowArt/asset/word.png" alt="word" onclick="playWordAudio();">
+            <img src="asset/word.png" alt="word" onclick="playWordAudio();">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="/Users/tiffanyshe/Downloads/BowArt/asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
+                        <img src="asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <p>Buddha said: "Volition I call <i>Kamma</i>. Through volition, one performs action by body, by speech, or by mind."</p>
@@ -135,11 +135,11 @@
 
         <!-- Group for Bird Image and its Card -->
         <div class="image-card-group">
-            <img src="/Users/tiffanyshe/Downloads/BowArt/asset/bird.png" alt="bird" onclick="playBirdAudio();">
+            <img src="asset/bird.png" alt="bird" onclick="playBirdAudio();">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="/Users/tiffanyshe/Downloads/BowArt/asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
+                        <img src="asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <div class="text-overlay"><i>Kamma</i> is the cause, not the effect. <p>Wise attention will allow you to do good <i>Kamma</i>.</p>
@@ -151,11 +151,11 @@
 
         <!-- Group for Leaves Image and its Card -->
         <div class="image-card-group">
-            <img src="/Users/tiffanyshe/Downloads/BowArt/asset/axes.png" alt="axes" onclick="playTreeAudio();">
+            <img src="asset/axes.png" alt="axes" onclick="playTreeAudio();">
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="/Users/tiffanyshe/Downloads/BowArt/asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
+                        <img src="asset/buddha.png" alt="buddha" style="width:280px;height:300px;">
                     </div>
                     <div class="flip-card-back">
                         <div class="text-overlay"><p>Unwise attention will cause you to do bad <i>kamma</i>.<p> The future results or fruit will depend on your volition, in the present.</p><p>Disrepecting lives would get bad results.</p>
@@ -167,9 +167,9 @@
 
     <script>
         // Define the audio objects
-        const wordAudio = new Audio('/Users/tiffanyshe/Downloads/BowArt/audio/word.mp3');
-        const birdAudio = new Audio('/Users/tiffanyshe/Downloads/BowArt/audio/bird.mp3');
-        const treeAudio = new Audio('/Users/tiffanyshe/Downloads/BowArt/audio/tree.mp3');
+        const wordAudio = new Audio('audio/word.mp3');
+        const birdAudio = new Audio('audio/bird.mp3');
+        const treeAudio = new Audio('audio/tree.mp3');
 
         // Functions to play the audio
         function playWordAudio() {
@@ -184,7 +184,7 @@
             treeAudio.play();
         }
     </script>
-    <a href="/Users/tiffanyshe/Downloads/BowArt/page01.html" target="page01">
+    <a href="page01.html" target="page01">
     <button class="button">I understand.</button>
 </body>
 </html>
