--- a/page01.html
+++ b/page01.html
@@ -51,7 +51,7 @@
 <body>
 
 <div class="container">
-  <img src="asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
+  <img src="./asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
 </div>
 
 <script>
@@ -66,24 +66,24 @@
   
 <div class="row">
     <div class="column">
-    <a href="page04.html" target="form">
-    <img src="asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></div>
+    <a href="./page04.html" target="form">
+    <img src="./asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></div>
 
     <div class="column">
-    <a href="page05.html" target="realm">
-    <img src="asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></div>
+    <a href="./page05.html" target="realm">
+    <img src="./asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></div>
 
     <div class="column">
-    <a href="page06.html" target="conception">
-    <img src="asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></div>
+    <a href="./page06.html" target="conception">
+    <img src="./asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></div>
 
     <div class="column">
-    <a href="page08.html" target="volition">
-    <img src="asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></div>
+    <a href="./page08.html" target="volition">
+    <img src="./asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></div>
 
     <div class="column">
-    <a href="page09.html" target="Consciousness">
-    <img src="asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></div>
+    <a href="./page09.html" target="Consciousness">
+    <img src="./asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></div>
 </div>
 </div>
 
