--- a/page02.html
+++ b/page02.html
@@ -41,7 +41,7 @@
 <body>
 
 <div class="container">
-  <img src="asset/Temple 03.png" alt="Temple 03" style="width:100%">
+  <img src="./asset/Temple 03.png" alt="Temple 03" style="width:100%">
   <button class="btn">ENTER</button>
 </div>
 
