--- a/page03.html
+++ b/page03.html
@@ -56,14 +56,14 @@
 <body>
 
 <div class="container">
-  <img src="asset/Temple 04.png" alt="Temple 04">
+  <img src="./asset/Temple 04.png" alt="Temple 04">
   
   <div class="candles">
-    <img src="asset/candle.png" alt="candle">
-  <img src="asset/candle1.png" alt="candle1"> </div>
+    <img src="./asset/candle.png" alt="candle">
+  <img src="./asset/candle1.png" alt="candle1"> </div>
 
   <div class="flower">
-   <img src="asset/flower.png" alt="flower"> 
+   <img src="./asset/flower.png" alt="flower"> 
 </div>
 
 </body>
