--- a/page04.html
+++ b/page04.html
@@ -84,13 +84,13 @@ body, html{
 
 
 <div class="container">
-  <img src="asset/meditation.png" alt="Background Image" class="background-image">
+  <img src="./asset/meditation.png" alt="Background Image" class="background-image">
 <video class="overlay-video" controls>
-<source src="waterfall.mp4" type="video/mp4">
+<source src="./waterfall.mp4" type="video/mp4">
 Your browser does not support the video tag.  </video>
 <div class="overlay-text">Form is not different from emptiness, <p>Emptiness is not different from form.</p></div>
 
-<a href="page01.html" target="page01">
+<a href="./page01.html" target="page01">
 <button class="button">I understand.</button>
 
 </div>
