--- a/page05.html
+++ b/page05.html
@@ -99,7 +99,7 @@
     Up to no realm of mind-consciousness;
   </div>
   <video controls>
-    <source src="realm.mp4" type="video/mp4">
+    <source src="./realm-1.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
   </div>
@@ -108,7 +108,7 @@
   Flute : Nagendra Rai | Arrange/ Mixing : Rajan Karki | Credit : Vedan Media
 </div>
 
-<a href="page01.html" target="page01">
+<a href="./page01.html" target="page01">
     <button class="button">I understand.</button>
 
 </body>
