--- a/page06.html
+++ b/page06.html
@@ -3,7 +3,7 @@
 <head>
 <style> 
 .fixed-bg {
-  background-image: url('asset/Temple 04.png');
+  background-image: url('./asset/Temple 04.png');
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
@@ -95,21 +95,21 @@
  
 <div class="fixed-bg"></div>
 
-<div style="height:10px;background-background-image: url('asset/Temple 04.png');"></div>
+<div style="height:10px;background-background-image: url('./asset/Temple 04.png');"></div>
 
 
 <div class="container">
-<a href="page07.html" target="ENTER">
-  <img src="asset/Temple 03.png" alt="Temple 03" style="width:100%">
+<a href="./page07.html" target="ENTER">
+  <img src="./asset/Temple 03.png" alt="Temple 03" style="width:100%">
   <button class="btn">ENTER</button>
 </div>
 
 <div class="candles">
-    <img src="asset/candle.png" alt="candle">
-  <img src="asset/candle1.png" alt="candle1"> </div>
+    <img src="./asset/candle.png" alt="candle">
+  <img src="./asset/candle1.png" alt="candle1"> </div>
 
   <div class="flower">
-   <img src="asset/flower.png" alt="flower"> </div>
+   <img src="./asset/flower.png" alt="flower"> </div>
 
 </body>
 </html>
