--- a/page09.html
+++ b/page09.html
@@ -94,7 +94,7 @@ button:active {
 <header>Consciousness game</header>
 
 <div class="polaroid">
-  <img src="asset/monk.png" alt="monk" style="width:50%">
+  <img src="./asset/monk.png" alt="monk" style="width:50%">
   <div class="container">
   <p>Letting go of attachments and ego helps us overcome obstacles and brings us closer to Nirvana.</p>
   </div>
@@ -118,7 +118,7 @@ button:active {
 <!-- Exit Button -->
  <br>
     <p>May the merits of our deeds reach every part of the world!</p>
-    <a href="page01.html" target="page01">
+    <a href="./page01.html" target="page01">
         <button class="button exit" onclick="playAudio();">Exit</button>
     </a>
 </div>
@@ -257,7 +257,7 @@ function clearmove() {
 
 <script>
 //Define the audio object
-  const aAudio = new Audio('audio/4.mp3')
+  const aAudio = new Audio('./audio/4.mp3')
 
 //Function to play the audio
   function playAudio(){
