--- a/page01.html
+++ b/page01.html
@@ -24,7 +24,7 @@
 }
 
 /* clear fix */
-.rox:after {
+.row:after {
   content:"";
   clear:both;
   display: table;
@@ -32,7 +32,7 @@
 
 .audio {
   position: absolute;
-  Bottom: 10px
+  Bottom: 10px;
   left: 10%;
   transform: translateX(-182%);
   z-index: 1; /* Ensure the audio controls are above the image */
@@ -43,7 +43,7 @@
 }
 
 .column a:hover img {
-  transfrom: scale(1.1);
+  transform: scale(1.1);
 }
 
 </style>
