--- a/page04.html
+++ b/page04.html
@@ -95,7 +95,7 @@ body, html {
     <p>Emptiness is not different from form.</p>
   </div>
 
-  <button class="button" onclick="history.back()">I understand.</button>
+  <button class="button" onclick="window.location.href='./page01.html'">I understand.</button>
 
 </div>
 </body>
