--- a/page04.html
+++ b/page04.html
@@ -95,8 +95,9 @@ body, html {
     <p>Emptiness is not different from form.</p>
   </div>
 
-  <button class="button" onclick="window.location.href='./page01.html'">I understand.</button>
-
+<a href="./page01.html" target="page01">
+<button class="button" onclick="history.back()">I understand.</button>
+  
 </div>
 </body>
 </html>
