--- a/page08.html
+++ b/page08.html
@@ -19,7 +19,7 @@
             padding: 80px;
             box-sizing: border-box;
             width: 100%;
-            background-image: url('volition.png') ;
+            background-image: url('./asset/volition.png') ;
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
