--- a/page05.html
+++ b/page05.html
@@ -109,7 +109,7 @@
 </div>
 
 <a href="./page01.html" target="page01">
-    <button class="button">I understand.</button>
+    <button class="button">I understand</button>
 
 </body>
 </html>
