--- a/page04.html
+++ b/page04.html
@@ -91,7 +91,7 @@ Your browser does not support the video tag.  </video>
 <div class="overlay-text">Form is not different from emptiness, <p>Emptiness is not different from form.</p></div>
 
 <a href="./page01.html" target="page01">
-<button class="button">I understand.</button>
+<button class="button">I understand</button>
 
 </div>
 </body>
