--- a/page00.html
+++ b/page00.html
@@ -21,6 +21,33 @@ div {text-align: center;}
   max-width: 100%;
   height: auto;
 }
+.button {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        display: inline-block;
+        padding: 8px 16px;
+        font-size: 10px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        font-weight: bold;
+        outline: none;
+        color: white;
+        background-color: black;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 9px #666;
+        }
+
+        .button:hover {background-color: #AE2C2B;}
+
+        .button:active {
+        background-color: skyblue;
+        box-shadow: 0 5px #666;
+        transform: translateX(-50%);
+        }
+
 
 </style>
 </head>
@@ -35,6 +62,10 @@ div {text-align: center;}
 <p>The goal of the game is to reach Nirvana by understanding that form, feeling, perception, volition, and consciousness are all empty. This realization enables us to transcend suffering. While suffering is a part of every life, Nirvana—the end of suffering—is attainable for all.</p>
 
 <img src="./asset/instruction.png" alt="instruction" class="image"></div>
+<br>
+<a href="./index.html" target="index">
+<button class="button">Back</button>
+
 
 </body>
 </html>
