--- a/page05.html
+++ b/page05.html
@@ -81,7 +81,7 @@
         .button:hover {background-color: darkgrey;}
 
         .button:active {
-        background-color: grey;
+        background-color: skyblue;
         box-shadow: 0 5px #666;
         transform: translateX(-50%);
         }
