--- a/page09.html
+++ b/page09.html
@@ -77,11 +77,11 @@ button:active {
 }
 
 .exit: hover {
-    background-color: grey;
+    background-color: black;
 }
 
 .exit:active {
-    background-color: pink; /* Even darker red on click */
+    background-color: skyblue; 
     transform: scale(0.95); /* Slightly smaller on click */
     box-shadow: 0 5px #666; 
 }
