--- a/page09.html
+++ b/page09.html
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-    background-color: darkgrey; /* Darker green on hover */
+    background-color: black; /* Darker green on hover */
 }
 
 button:active {
