--- a/page09.html
+++ b/page09.html
@@ -67,7 +67,7 @@ button:hover {
 }
 
 button:active {
-    background-color: black; /* Even darker green on click */
+    background-color: darkgrey; 
     transform: scale(0.95); /* Slightly smaller on click */
     box-shadow: 0 9px #999;
 }
