--- a/page00.html
+++ b/page00.html
@@ -54,7 +54,7 @@ div {text-align: center;}
 <body>
 
 <h2>About</h2>
-<p> This installation aims to integrate traditional Buddhist techniques into game design. In doing so examining religious practices as forms of communication and expressions of digital spirituality. Through this game, I intend to embody the essence of Buddhist teachings and invite the audience to experience the unique culture of Taiwanese temples.</p>
+<p> This installation integrates traditional Buddhist techniques into game design, exploring religious practices as forms of communication and expressions of digital spirituality. Through this game, I aim to embody the essence of Buddhist teachings and invite the audience to experience the unique culture of Taiwanese temples.</p>
  
 <div class="fixed-bg"></div>
 
