--- a/page00.html
+++ b/page00.html
@@ -5,10 +5,11 @@
 .fixed-bg {
   background-image: url("./asset/window.png");
   min-height: 500px;
+  min-width: 90%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 90% 80%;
 }
 
 h2 {text-align: center;}
