--- a/page00.html
+++ b/page00.html
@@ -55,14 +55,14 @@ div {text-align: center;}
 <body>
 
 <h2>About</h2>
-<p> This installation integrates traditional Buddhist techniques into game design, exploring religious practices as forms of communication and expressions of digital spirituality. Through this game, I aim to embody the essence of Buddhist teachings and invite the audience to experience the unique culture of Taiwanese temples.</p>
+<p> This installation integrates traditional Buddhist techniques into interaction design, exploring religious practices as forms of communication and expressions of digital spirituality. Through this interaction, I aim to embody the essence of Buddhist teachings and invite the audience to experience the unique culture of Taiwanese temples.</p>
  
 <div class="fixed-bg"></div>
 
 <div style="background-color:white;"><h2>Game Instruction</h2></div>
-<p>The goal of the game is to reach Nirvana by understanding that form, feeling, perception, volition, and consciousness are all empty. This realization enables us to transcend suffering. While suffering is a part of every life, Nirvana—the end of suffering—is attainable for all.</p>
+<p>The goal of the experience is to reach Nirvana by understanding that form, feeling, perception, volition, and consciousness are all empty. This realization enables us to transcend suffering. While suffering is a part of every life, Nirvana—the end of suffering—is attainable for all.</p>
 
-<img src="./asset/instruction.png" alt="instruction" class="image"></div>
+<img src="./asset/instruction-1.png" alt="instruction" class="image"></div>
 <br>
 <a href="./index.html" target="index">
 <button class="button">Back</button>
