--- a/page01.html
+++ b/page01.html
@@ -4,46 +4,74 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-
+/* Container for the entire layout */
 .container img {
   width: 100%;
   height: auto;
   cursor: pointer;
 }
 
-/* very strange*/
+/* Reset box-sizing */
 * {
   box-sizing: border-box;
 }
 
+/* Style for the left content (image grid) */
 .column {
-  float:left;
-  width:20%;
+  float: left;
+  width: 20%;
   padding: 10px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
-/* clear fix */
+/* Clear fix for row */
 .row:after {
-  content:"";
-  clear:both;
+  content: "";
+  clear: both;
   display: table;
 }
 
+/* Style for audio button */
 .audio {
   position: absolute;
-  Bottom: 10px;
+  bottom: 10px;
   left: 10%;
   transform: translateX(-182%);
-  z-index: 1; /* Ensure the audio controls are above the image */
+  z-index: 1;
 }
 
+/* Hover effect for images */
 .column a img {
-  transition: transfrom 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .column a:hover img {
   transform: scale(1.1);
+}
+
+/* Style for the right-side narrative panel */
+.narrative-panel {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 25%;
+  height: 100%;
+  padding: 20px;
+  background-color: #f8f9fa;
+  overflow-y: auto;
+  border-left: 2px solid #ddd;
+  font-family: Arial, sans-serif;
+}
+
+.narrative-panel h2 {
+  font-size: 1.5em;
+  color: #333;
+}
+
+.narrative-panel p {
+  font-size: 1em;
+  line-height: 1.6;
+  color: #555;
 }
 
 </style>
@@ -54,40 +82,50 @@
   <img src="./asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
 </div>
 
-<script>
-//Define the audio object
-  const aAudio = new Audio('audio/1.mp3')
-
-//Function to play the audio
-  function playAudio(){
-    aAudio.play();
-  }
-</script>
-  
 <div class="row">
     <div class="column">
-    <a href="./page04.html" target="form">
-    <img src="./asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></div>
+      <a href="./page04.html" target="form">
+      <img src="./asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></a>
+    </div>
 
     <div class="column">
-    <a href="./page05.html" target="realm">
-    <img src="./asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></div>
+      <a href="./page05.html" target="realm">
+      <img src="./asset/apple.png" alt="apple" style="width: 80px; height:100px"><p>Feeling</p></a>
+    </div>
 
     <div class="column">
-    <a href="./page06.html" target="conception">
-    <img src="./asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></div>
+      <a href="./page06.html" target="conception">
+      <img src="./asset/pear.png" alt="pear" style="width: 80px; height:100px"><p>Conception</p></a>
+    </div>
 
     <div class="column">
-    <a href="./page08.html" target="volition">
-    <img src="./asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></div>
+      <a href="./page08.html" target="volition">
+      <img src="./asset/orange.png" alt="orange" style="width: 80px; height:100px"><p>Volition</p></a>
+    </div>
 
     <div class="column">
-    <a href="./page09.html" target="Consciousness">
-    <img src="./asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></div>
+      <a href="./page09.html" target="Consciousness">
+      <img src="./asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></a>
+    </div>
 </div>
+
+<!-- Right-side narrative panel -->
+<div class="narrative-panel">
+  <h2>Narratives</h2>
+  <p>Here you can add narrative descriptions or texts about each section.</p>
+  <p>For example, clicking "Form" can display details about this concept, its symbolism, and how it fits within the broader theme.</p>
+  <!-- Add more narrative content here as needed -->
 </div>
 
+<script>
+// Define the audio object
+const aAudio = new Audio('audio/1.mp3');
 
+// Function to play the audio
+function playAudio(){
+  aAudio.play();
+}
+</script>
 
 </body>
 </html>
