--- a/page01.html
+++ b/page01.html
@@ -17,14 +17,20 @@
 }
 
 /* Style for the left content (image grid) */
-.column {
+.image-grid {
   float: left;
-  width: 20%;
+  width: 70%; /* Adjusted width to allow space for the right panel */
   padding: 10px;
-  cursor: pointer;
 }
 
-/* Clear fix for row */
+/* Each column for the image grid */
+.column {
+  width: 19%; /* Adjusted to fit in a narrower container */
+  padding: 10px;
+  float: left;
+  text-align: center;
+}
+
 .row:after {
   content: "";
   clear: both;
@@ -51,11 +57,9 @@
 
 /* Style for the right-side narrative panel */
 .narrative-panel {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 25%;
-  height: 100%;
+  float: right;
+  width: 25%; /* Right panel width */
+  height: 100vh; /* Full viewport height */
   padding: 20px;
   background-color: #f8f9fa;
   overflow-y: auto;
@@ -73,7 +77,6 @@
   line-height: 1.6;
   color: #555;
 }
-
 </style>
 </head>
 <body>
@@ -82,7 +85,9 @@
   <img src="./asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
 </div>
 
-<div class="row">
+<!-- Image grid, now aligned to the left -->
+<div class="image-grid">
+  <div class="row">
     <div class="column">
       <a href="./page04.html" target="form">
       <img src="./asset/pineapple.png" alt="pineapple" style="width: 80px; height:100px"><p>Form</p></a>
@@ -107,6 +112,7 @@
       <a href="./page09.html" target="Consciousness">
       <img src="./asset/papaya.png" alt="papaya" style="width: 80px; height:100px"><p>Consciousness</p></a>
     </div>
+  </div>
 </div>
 
 <!-- Right-side narrative panel -->
