--- a/page01.html
+++ b/page01.html
@@ -86,10 +86,10 @@
 
   <!-- Right-side narrative panel -->
   <div class="narrative-panel">
-    <h2>Narratives</h2>
-    <p>Here you can add narrative descriptions or texts about each section.</p>
-    <p>For example, clicking "Form" can display details about this concept, its symbolism, and how it fits within the broader theme.</p>
-    <!-- Add more narrative content here as needed -->
+    <h2>Welcome!</h2>
+    <p>While deeply immersed in Prajna Paramita, clearly perceived the empty nature of the five skandhas, And transcended all suffering.</p>
+    <p>If you need my help, you must have enough blessings, good intentional action, and always be kind. Practice asceticism and you will attain the goal.</p>
+    <p>Finish step by step from left to right.</p>
   </div>
 </div>
 
