--- a/page01.html
+++ b/page01.html
@@ -81,7 +81,7 @@
 <!-- Container with Temple 02 image and Narrative Panel side-by-side -->
 <div class="top-container">
   <div class="temple-image">
-    <img src="./asset/Temple 02.png" alt="Temple 02" onclick="playAudio();">
+    <img src="./asset/Temple 02.png" alt="Temple 02">
   </div>
 
   <!-- Right-side narrative panel -->
@@ -121,16 +121,5 @@
     </a>
   </div>
 </div>
-
-<script>
-// Define the audio object
-const aAudio = new Audio('audio/1.mp3');
-
-// Function to play the audio
-function playAudio(){
-  aAudio.play();
-}
-</script>
-
 </body>
 </html>
