--- a/page01.html
+++ b/page01.html
@@ -96,27 +96,27 @@
 <!-- Image grid, below the temple image and narrative panel -->
 <div class="image-grid">
   <div class="column">
-    <a href="./page04.html" target="form">
+    <a href="./page04.html">
       <img src="./asset/pineapple.png" alt="pineapple"><p>Form</p>
     </a>
   </div>
   <div class="column">
-    <a href="./page05.html" target="realm">
+    <a href="./page05.html">
       <img src="./asset/apple.png" alt="apple"><p>Feeling</p>
     </a>
   </div>
   <div class="column">
-    <a href="./page06.html" target="conception">
+    <a href="./page06.html">
       <img src="./asset/pear.png" alt="pear"><p>Conception</p>
     </a>
   </div>
   <div class="column">
-    <a href="./page08.html" target="volition">
+    <a href="./page08.html">
       <img src="./asset/orange.png" alt="orange"><p>Volition</p>
     </a>
   </div>
   <div class="column">
-    <a href="./page09.html" target="Consciousness">
+    <a href="./page09.html">
       <img src="./asset/papaya.png" alt="papaya"><p>Consciousness</p>
     </a>
   </div>
