--- a/page01.html
+++ b/page01.html
@@ -97,27 +97,27 @@
 <div class="image-grid">
   <div class="column">
     <a href="./page04.html">
-      <img src="./asset/pineapple.png" alt="pineapple"><p>Form</p>
+      <img src="./asset/pineapple.png" alt="pineapple"><p>1.Form</p>
     </a>
   </div>
   <div class="column">
     <a href="./page05.html">
-      <img src="./asset/apple.png" alt="apple"><p>Feeling</p>
+      <img src="./asset/apple.png" alt="apple"><p>2.Feeling</p>
     </a>
   </div>
   <div class="column">
     <a href="./page06.html">
-      <img src="./asset/pear.png" alt="pear"><p>Conception</p>
+      <img src="./asset/pear.png" alt="pear"><p>3.Conception</p>
     </a>
   </div>
   <div class="column">
     <a href="./page08.html">
-      <img src="./asset/orange.png" alt="orange"><p>Volition</p>
+      <img src="./asset/orange.png" alt="orange"><p>4.Volition</p>
     </a>
   </div>
   <div class="column">
     <a href="./page09.html">
-      <img src="./asset/papaya.png" alt="papaya"><p>Consciousness</p>
+      <img src="./asset/papaya.png" alt="papaya"><p>5.Consciousness</p>
     </a>
   </div>
 </div>
