--- a/page01.html
+++ b/page01.html
@@ -85,7 +85,7 @@
 
   <!-- Right-side narrative panel -->
   <div class="narrative-panel">
-    <h2>Welcome!</h2>
+    <h2>I am Guan Yin</h2>
     <p>While deeply immersed in Prajna Paramita, clearly perceived the empty nature of the five skandhas, And transcended all suffering.</p>
     <p>If you need my help, you must have enough blessings, good intentional action, and always be kind. Practice asceticism and you will attain the goal.</p>
     <p>Finish step by step from left to right.</p>
