--- a/page04.html
+++ b/page04.html
@@ -90,7 +90,7 @@ body, html{
 Your browser does not support the video tag.  </video>
 <div class="overlay-text">Form is not different from emptiness, <p>Emptiness is not different from form.</p></div>
 
-<a href="./page01.html" target="page01">
+<a href="./page01.html">
 <button class="button">I understand</button>
 
 </div>
