--- a/page04.html
+++ b/page04.html
@@ -22,7 +22,8 @@ body, html {
 
 .background-image {
   width: 100%;
-  height: 100%;
+  height: 100vh; /* Ensure full viewport height */
+  object-fit: cover; /* Keep aspect ratio, cover the container */
   display: block;
 }
 
