--- a/page04.html
+++ b/page04.html
@@ -5,26 +5,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
-body, html {
-  margin: 0;
+body, html{
+  margin:0;
   padding: 0;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('./asset/meditation.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  overflow: hidden; /* Prevent scrolling when panel is open */
 }
 
 .container {
   position: relative;
-  z-index: 1;
+  width: 400px
+  max-width: 300px;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .overlay-video {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the video */
   width: 45%;
   height: auto;
   object-fit: cover;
@@ -35,7 +41,7 @@ body, html {
   position: absolute;
   top: 30%;
   left: 52%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); /* Center the video */
   color: white;
   font-size: 16px;
   font-weight: bold;
@@ -44,98 +50,49 @@ body, html {
   z-index: 1; 
 }
 
-.button-container {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  gap: 10px;
-}
-
 .button {
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  font-weight: bold;
-  color: white;
-  background-color: black;
-  border: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #666;
-}
+        position: absolute;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 20px;
+        cursor: pointer;
+        text-align: center;
+        text-decoration: none;
+        font-weight: bold;
+        outline: none;
+        color: white;
+        background-color: black;
+        border: none;
+        border-radius: 15px;
+        box-shadow: 0 9px #666;
+        }
 
-.button:hover { background-color: #00A19A; }
+        .button:hover {background-color: #00A19A;}
 
-.button:active {
-  background-color: skyblue;
-  box-shadow: 0 5px #666;
-}
-
-/* Panel Styling */
-.panel {
-  position: fixed;
-  right: -100%;
-  top: 0;
-  width: 300px;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.9);
-  color: white;
-  padding: 20px;
-  transition: right 0.3s ease;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
-
-.panel.active {
-  right: 0; /* Slide the panel in */
-}
-
-.close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 24px;
-  cursor: pointer;
-  color: white;
-}
+        .button:active {
+        background-color: skyblue;
+        box-shadow: 0 5px #666;
+        transform: translateX(-50%);
+        }
 
 </style>
 </head>
 <body>
 
+
 <div class="container">
   <img src="./asset/meditation.png" alt="Background Image" class="background-image">
-  <video class="overlay-video" controls>
-    <source src="./waterfall-1.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-  <div class="overlay-text">Form is not different from emptiness, <p>Emptiness is not different from form.</p></div>
+<video class="overlay-video" controls>
+<source src="./waterfall-1.mp4" type="video/mp4">
+Your browser does not support the video tag.  </video>
+<div class="overlay-text">Form is not different from emptiness, <p>Emptiness is not different from form.</p></div>
 
-  <div class="button-container">
-    <a href="./page01.html"><button class="button">I understand</button></a>
-    <button class="button" onclick="openPanel()">I don't understand</button>
-  </div>
+<a href="./page01.html">
+<button class="button">I understand</button>
+
 </div>
-
-<!-- Sliding Panel -->
-<div class="panel" id="infoPanel">
-  <span class="close-btn" onclick="closePanel()">&times;</span>
-  <h2>Learn more</h2>
-  <p> All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
-</div>
-
-<script>
-function openPanel() {
-  document.getElementById("infoPanel").classList.add("active");
-}
-
-function closePanel() {
-  document.getElementById("infoPanel").classList.remove("active");
-}
-</script>
-
 </body>
 </html>
